highscore card in PauseMenu